Fix navbar overflow

--- a/style.scss
+++ b/style.scss
@@ -219,7 +219,7 @@ img {
   float: left;
   min-width: 250px;
   max-width: 450px;
-  // width: 90%;
+  width: 100%;
   // min-width: 400px;
   // // height: 70px;
   // margin-right: 10px;
